# CyberBiologyCPP

./: .gitignore  Bot.cpp  Bot.h  CMakeLists.txt  Helpers.cpp  Helpers.h  ImguiHelpers.cpp  ImguiHelpers.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  build_and_run.bat  config.cpp  config.h  imgui.ini  main.cpp
include/GL/: gl3w.h  glcorearb.h
include/glfw/: gl3w.c
src/app/: bench.cpp  main.cpp
src/io/: WorldIO.cpp  WorldIO.h
src/platform/: Helpers.cpp
src/render/: GridRenderer.cpp  GridRenderer.h
src/sim/: Bot.cpp  Bot.h  GpuSimulation.cpp  GpuSimulation.h  SimConfig.h  Simulation.cpp  Simulation.h  World.cpp  World.h  WorldState.cpp  WorldState.h  config.cpp  config.h
